@@ -1,3 +1,7 @@
+== LATEST
+
+ * Don't open unnecessary database transactions on save.
+
 == 0.0.2 2010-09-28
 
  * Rename to Active Nomad.
